--- a/contactme.css
+++ b/contactme.css
@@ -132,7 +132,11 @@ section {
         margin-bottom: -30px;
     }
  }
-
+ @media only screen and (-webkit-min-device-pixel-ratio: 2.75) {
+     section {
+        margin-top: 28vh;
+     }
+}
  
 
  @media (min-width:1200px) {
