--- a/contactme.css
+++ b/contactme.css
@@ -1,68 +1,240 @@
-section::before {
-    content: '';
-    position: absolute;
-    width: 100vw;
-    height: 50vh;
-    bottom: 0;
-    z-index: 10;
-    background: rgba(255,255,255,.1);
-    backdrop-filter: blur(10px);
+* {
+	padding:0;
+	margin:0;
+}
+body {
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:14px;
+}
+.form_wrapper {
+  background: transparent;
+	width:500px;
+	max-width:100%;
+	box-sizing:border-box;
+	margin: 10% auto 0;
+  margin-top: 2%;
+	position:relative;
+	z-index:1;
+}
+.form_container {
+	padding:15px;
+  border: 10px solid;
+  border-image-slice: 1;
+  border-width: 2px;
+  border-image-source:linear-gradient(#2196f3,#f0f);
+}
+.form_wrapper h2 {
+	font-size:1.5em;
+	line-height:1.5em;
+	margin:0;
+}
+.form_wrapper .title_container {
+	text-align:center;
+}
+.form_wrapper h3 {
+	font-size:1.1em;
+	font-weight:normal;
+	line-height:1.5em;
+	margin:0;
+}
+.form_wrapper .row {
+	margin:10px -15px;
+}
+.form_wrapper .row > div {
+	padding:0 15px;
+	box-sizing:border-box;
+}
+.form_wrapper .col_half {
+	width:50%;
+	float:left;
+}
+.form_wrapper label {
+	display:block;
+	margin:0 0 5px;
+}
+.form_wrapper .input_field, .form_wrapper .textarea_field {
+	position:relative;
+}
+.form_wrapper .input_field > span, .form_wrapper .textarea_field > span {
+	position:absolute;
+	left:0;
+	top:0;
+	color:#333;
+	height:100%;
+	border-right:1px solid #ccc;
+	text-align:center;
+	width:30px;
+}
+.form_wrapper .textarea_field > span {
+	border-bottom:1px solid #ccc;
+	max-height:35px;
+}
+.form_wrapper .input_field > span > i, .form_wrapper .textarea_field > span > i {
+	padding-top:12px;
+}
+.form_wrapper input[type="text"], .form_wrapper input[type="email"], .form_wrapper input[type="tel"], textarea {
+	width:100%;
+	padding:10px 10px 10px 35px;
+	border:1px solid #ccc;
+	box-sizing:border-box;
+	outline:none;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	transition: all 0.30s ease-in-out;
+}
+.form_wrapper textarea {
+	height:8em;
 }
 
 
-#sociallinks {
+.button {
     position: relative;
-    list-style: none;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-
-}
-
-.links {
-    position: relative;
-    top: 0;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    width: 80px;
-    height: 80px;
-    color: #fff;
-    font-size: 2.5em;
-    border: 1px solid rgba(255,255,255,.4);
-    border-right: 1px solid rgba(255,255,255,.4);
-    border-bottom: 1px solid rgba(255,255,255,.4);
-    border-radius: 10px;
-    background: rgba(255,255,255,.1);
-    backdrop-filter: blur(4px);
-    z-index: 1;
-    box-shadow: 0 5px 45px rgba(0,0,0,.1);
-    text-decoration: none;
-    transition: top 0.5s, z-index 0s, transform 0.5s;
-    transition-delay: 0.5s, 0s, 0s;
-}
-
-.links:hover {
-    transition-delay: 0s, 0.5s, 0.5s;
-    top: -50px;
-    transform: translateY();
-    z-index: 11;
-    color: black;
-    text-decoration: none;
-}
-
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#sociallinks {
-    position: absolute;
-     top: clamp(36%,41%,53%);
-} 
-
- #particles-js {
     width: 100%;
-    height: 100%;
+    margin: 0;
+    padding: 1.5rem 3.125rem;
+    background-color: #3498db;
+    border: none;
+    border-radius: 0.3125rem;
+    box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
+    color: white;
+    font-weight: 300;
+    text-transform: uppercase;
+    overflow: hidden;
   }
+  .button:before {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: #54d98c;
+  }
+  .button span {
+    position: absolute;
+    line-height: 0;
+  }
+  .button span i {
+    transform-origin: center center;
+  }
+  .button span:nth-of-type(1) {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .button span:nth-of-type(2) {
+    top: 100%;
+    transform: translateY(0%);
+    font-size: 24px;
+  }
+  .button span:nth-of-type(3) {
+    display: none;
+  }
+  
+  .active {
+    background-color: #2ecc71;
+  }
+  .active:before {
+    width: 100%;
+    transition: width 3s linear;
+  }
+  .active span:nth-of-type(1) {
+    top: -100%;
+    transform: translateY(-50%);
+  }
+  .active span:nth-of-type(2) {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .active span:nth-of-type(2) i {
+    animation: loading 500ms linear infinite;
+  }
+  .active span:nth-of-type(3) {
+    display: none;
+  }
+  
+  .finished {
+    background-color: #54d98c;
+  }
+  .finished .submit {
+    display: none;
+  }
+  .finished .loading {
+    display: none;
+  }
+  .finished .check {
+    display: block !important;
+    font-size: 24px;
+    animation: scale 0.5s linear;
+  }
+  .finished .check i {
+    transform-origin: center center;
+  }
+  
+  @keyframes loading {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes scale {
+    0% {
+      transform: scale(10);
+    }
+    50% {
+      transform: scale(0.2);
+    }
+    70% {
+      transform: scale(1.2);
+    }
+    90% {
+      transform: scale(0.7);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+.credit{
+	position:relative;
+	z-index:1;
+	text-align:center;
+	padding:15px;
+	color:#f5ba1a;	
+}
+.credit a{
+	color:#daa106;	
+}
+
+.email-field {
+    width:100%;
+}
+
+@media (max-width: 600px) {
+.form_wrapper .col_half {
+	width:100%;
+	float:none;
+}
+.form_wrapper label {
+	margin:10px 0;
+}
+}
+
+h2 {
+    font-weight: 900;
+    color: #fff;
+}
+
+label {
+    font-weight: 700;
+    color: #fff;
+}
+
+@media (max-width:768px) {
+  .hidden {
+    opacity: 0;
+  }
+}
+
